# ctcc_trainee_fc

./: README.md
ctcc_trainee_fc/: README.md
ctcc_trainee_fc/code/: README.md  perception.launch
ctcc_trainee_fc/code/src/sensor_img_processing/: CMakeLists.txt  CMakeLists.txt.bak  package.xml
ctcc_trainee_fc/code/src/sensor_img_processing/config/: parameters.yaml
ctcc_trainee_fc/code/src/sensor_img_processing/include/sensor_processing_lib/: sensor_fusion.h
ctcc_trainee_fc/code/src/sensor_img_processing/msg/: Object.msg
ctcc_trainee_fc/code/src/sensor_img_processing/src/: sensor_setup_node.cpp  sensor_setup_nodelet.cpp
ctcc_trainee_fc/code/src/sensor_img_processing/src/sensor_processing_lib/: sensor_fusion.cpp  yolo_detector.cpp
